<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connection">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/connect_fragment_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/titleTextColor"
            android:textStyle="bold" />

        <ScrollView
            style="@android:style/Widget.DeviceDefault.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/com_connect_string"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/mainTextColor" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="right|center_vertical"
                            android:text="@string/com_port_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            android:textColor="@color/colorPrimaryDark" />

                        <Spinner
                            android:id="@+id/port_selector"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="10"
                            android:gravity="center_vertical|center_horizontal" />

                    </TableRow>

                </TableLayout>

                <Button
                    android:id="@+id/button"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_button_string"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/tcp_connect_string"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/mainTextColor" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/tcp_ip_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            android:textColor="@color/colorPrimaryDark" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/tcp_port_string"
                            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                            android:textColor="@color/colorPrimaryDark" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:inputType="textUri" />

                        <EditText
                            android:id="@+id/editText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:inputType="number" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </TableLayout>

                <Button
                    android:id="@+id/button2"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_button_string"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/button3"
                    style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/clearlog_button_string"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="false"
                    android:singleLine="false"
                    android:text="123"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Info.Media"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</FrameLayout>